--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="container-fluid col-2 text-center align-middle">
-        <img src="{{ url_for('static', filename='images/404.jpg') }}" style="max-width: 100%; border-radius: 100%;">
+        <img src="{{ Url.get('static', filename='images/404.jpg') }}" style="max-width: 100%; border-radius: 100%;">
     </div>
     {{ _('Page not found, was it demolished already?') }}
 {% endblock %}
