--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -20,11 +20,11 @@
     <meta name="apple-mobile-web-app-title" content="{{ _('Hidden places') }}"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/dselect.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/icons/bootstrap-icons.css') }}">
-    <link rel="shortcut icon" type="image/jpg" href="{{ url_for('static', filename='images/favicon.ico') }}"/>
+    <link rel="stylesheet" href="{{ Url.get('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ Url.get('static', filename='css/dselect.min.css') }}">
+    <link rel="stylesheet" href="{{ Url.get('static', filename='css/custom.css') }}">
+    <link rel="stylesheet" href="{{ Url.get('static', filename='bootstrap/icons/bootstrap-icons.css') }}">
+    <link rel="shortcut icon" type="image/jpg" href="{{ Url.get('static', filename='images/favicon.ico') }}"/>
 
     <!--
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
@@ -46,10 +46,10 @@
         {% block wrapper %}
         {% endblock %}
     </div>
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/dselect.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bs5-lightbox.min.js') }}"></script>
+    <script src="{{ Url.get('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ Url.get('static', filename='js/dselect.min.js') }}"></script>
+    <script src="{{ Url.get('static', filename='js/bs5-lightbox.min.js') }}"></script>
     {{ moment.include_moment() }}
-    <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
+    <script src="{{ Url.get('static', filename='js/custom.js') }}"></script>
 </body>
 </html>
