--- a/app/templates/_private.html
+++ b/app/templates/_private.html
@@ -6,8 +6,8 @@
     <button class="btn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleMenu">
         <i class="bi bi-list h4"></i>
     </button>
-    <a href="{{ url_for('location.browse') }}" class="link-dark text-decoration-none h3 justify-content-center align-items-center d-none d-md-flex">
-        <img class="mr-2" style="height: 40px" src="{{ url_for('static', filename='images/favicon.ico') }}" alt="">
+    <a href="{{ Url.get('location.browse') }}" class="link-dark text-decoration-none h3 justify-content-center align-items-center d-none d-md-flex">
+        <img class="mr-2" style="height: 40px" src="{{ Url.get('static', filename='images/favicon.ico') }}" alt="">
         {{ _('HiddenPlaces') }}
     </a>
 
@@ -15,7 +15,11 @@
         <div class="dropdown">
             <button type="button" class="btn position-relative me-3" id="dropdownAlerts" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-bell h4"></i>
-                {% set alerts_count=msg_alerts + invite_alerts + location_alerts + event_alerts + login_alerts %}
+                {% set alerts_count=msg_alerts %}
+                {% set alerts_count = alerts_count + (event_alerts if Url.get('admin.events').have_access else 0) %}
+                {% set alerts_count = alerts_count + (location_alerts if Url.get('admin.locations').have_access else 0) %}
+                {% set alerts_count = alerts_count + (invite_alerts if Url.get('admin.invitations').have_access else 0) %}
+                {% set alerts_count = alerts_count + (login_alerts if Url.get('admin.logins').have_access else 0) %}
                 {% if alerts_count %}
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                     {{ alerts_count }}
@@ -23,28 +27,32 @@
                 {% endif %}
             </button>
             <div class="dropdown-menu shadow dropdown-menu-end" aria-labelledby="dropdownAlerts">
-                {{ dropdown_link(_("Unreaded messages"), 'envelope', url_for('message.browse'), msg_alerts) }}
-                {{ dropdown_link(_("Latest changes"), 'journal-check', url_for('admin.events'), event_alerts) }}
-                {{ dropdown_link(_("New locations"), 'geo-alt', url_for('admin.locations'), location_alerts) }}
-                {{ dropdown_link(_("Invitations pending"), 'person', url_for('admin.invitations'), invite_alerts) }}
-                {{ dropdown_link(_("Failed logins"), 'exclamation-octagon', url_for('admin.logins'), login_alerts) }}
+                {{ dropdown_link(_("Unreaded messages"), 'envelope', Url.get('message.browse'), msg_alerts) }}
+                {{ dropdown_link(_("Latest changes"), 'journal-check', Url.get('admin.events'), event_alerts) }}
+                {{ dropdown_link(_("New locations"), 'geo-alt', Url.get('admin.locations'), location_alerts) }}
+                {{ dropdown_link(_("Invitations pending"), 'person', Url.get('admin.invitations'), invite_alerts) }}
+                {{ dropdown_link(_("Failed logins"), 'exclamation-octagon', Url.get('admin.logins'), login_alerts) }}
             </div>
         </div>
 
         <div class="dropdown">
-            <button href="#" class="btn" id="dropdownUser" data-bs-toggle="dropdown" aria-expanded="false">
+            <button href="#" class="btn position-relative" id="dropdownUser" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-person h4"></i>
+                {% if msg_alerts %}
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                    {{ msg_alerts }}
+                </span>
+                {% endif %}
                 <strong>{{ current_user }}</strong>
             </button>
 
             <ul class="dropdown-menu shadow dropdown-menu-end" aria-labelledby="dropdownUser">
-                {{ dropdown_link(_("Messages"), 'envelope', url_for('message.browse'), msg_alerts) }}
-                {{ dropdown_link(_("Profile"), 'person', url_for('user.profile')) }}
-                {{ dropdown_link(_("Change password"), 'key', url_for('user.change_password')) }}
+                {{ dropdown_link(_("Messages"), 'envelope', Url.get('message.browse'), msg_alerts) }}
+                {{ dropdown_link(_("Profile"), 'person', Url.get('user.profile')) }}
+                {{ dropdown_link(_("Change password"), 'key', Url.get('user.change_password')) }}
+                {{ dropdown_link(_("Invite new user"), 'people', Url.get('user.invite')) }}
                 <li><hr class="dropdown-divider"></li>
-                {{ dropdown_link(_("Invite new user"), 'people', url_for('user.invite')) }}
-                <li><hr class="dropdown-divider"></li>
-                {{ dropdown_link(_("Log out"), 'door-open', url_for('user.logout')) }}
+                {{ dropdown_link(_("Log out"), 'door-open', Url.get('user.logout')) }}
             </ul>
         </div>
     </div>
