--- a/app/templates/email/password_reset.html
+++ b/app/templates/email/password_reset.html
@@ -1,13 +1,13 @@
 <p>Dear {{ user }},</p>
 <p>
     To reset your password
-    <a href="{{ url_for('user.reset_password', token=token, _external=True) }}">
+    <a href="{{ Url.get('user.reset_password', token=token, _external=True) }}">
         click here
     </a>.
 </p>
 
 <p>Alternatively, you can paste the following link in your browser's address bar:</p>
-<p>{{ url_for('user.reset_password', token=token, _external=True) }}</p>
+<p>{{ Url.get('user.reset_password', token=token, _external=True) }}</p>
 <p>If you have not requested a password reset simply ignore this message.</p>
 <p>Sincerely,</p>
 <p>The HiddenPlaces Team</p>
