--- a/app/templates/location/_visits.html
+++ b/app/templates/location/_visits.html
@@ -15,12 +15,12 @@
             <div class="control-hover">
                 <div class="d-flex w-100 justify-content-between">
                     <span>
-                        <a href="{{ url_for('user.profile', id=visit.user_id) }}">
+                        <a href="{{ Url.get('user.profile', id=visit.user_id) }}">
                             <strong class="mb-1">{{ visit.user }}</strong>
                         </a>
                         <span class="control-hide">
-                            {{ link_button('', url_for_return('location.visit_edit', visit_id=visit.id), 'pencil', 'warning', class='btn-sm') }}
-                            {{ link_button('', url_for_return('location.visit_remove', visit_id=visit.id), 'trash', 'danger', class='btn-sm') }}
+                            {{ link_button('', Url.for_return('location.visit_edit', visit_id=visit.id), 'pencil', 'warning', class='btn-sm') }}
+                            {{ link_button('', Url.for_return('location.visit_remove', visit_id=visit.id), 'trash', 'danger', class='btn-sm') }}
                         </span>
                     </span>
                     <small>{{ visit.visited_on }}</small>
@@ -33,10 +33,10 @@
                 {% for image in visit.photos %}
                 <div class="col-sm-3">
                     <div class="position-relative control-hover">
-                        {{ link_button('', url_for_return('location.photo_remove', photo_id=image.id), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0 control-hide') }}
-                        <a href="{{ url_for('upload.get', path=image.path) }}"
+                        {{ link_button('', Url.for_return('location.photo_remove', photo_id=image.id), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0 control-hide') }}
+                        <a href="{{ Url.get('upload.get', path=image.path) }}"
                             data-toggle="lightbox" data-gallery="{{ visit.id }}">
-                            <img src="{{ url_for('upload.get', path=image.path) }}" class="img-fluid">
+                            <img src="{{ Url.get('upload.get', path=image.path) }}" class="img-fluid">
                         </a>
                     </div>
                 </div>
