--- a/app/templates/location/photo.html
+++ b/app/templates/location/photo.html
@@ -24,7 +24,7 @@
             {% endif %}
 
             <div class='text-end mt-2'>
-                {{ link_button(_('Cancel'), url_return(), None, 'danger') }}
+                {{ link_button(_('Cancel'), Url.get_return(), None, 'danger') }}
                 {{ form.submit(class="btn btn-success") }}
             </div>
         </form>
