--- a/app/templates/message/write.html
+++ b/app/templates/message/write.html
@@ -12,7 +12,7 @@
             {{ render_field(form.message, 'pencil', placeholder=_('Your message'), style='min-height: 20em') }}
 
             <div class="mt-2 text-end">
-                {{ link_button(_('Cancel'), url_return(), None, 'danger') }}
+                {{ link_button(_('Cancel'), Url.get_return(), None, 'danger') }}
                 {{ form.submit(class="btn btn-success") }}
             </div>
         </form>
