--- a/app/templates/page/edit.html
+++ b/app/templates/page/edit.html
@@ -10,7 +10,7 @@
             {{ render_field(form.text, style="min-height: 30em", placeholder=_('Page content'), description=markdown_description) }}
 
             <div class="mt-2 text-end">
-                {{ link_button(_('Cancel'), url_for('user.profile'), color='danger') }}
+                {{ link_button(_('Cancel'), Url.get('user.profile'), color='danger') }}
                 {{ form.submit(class="btn btn-success") }}
             </div>
         </form>
