--- a/app/templates/user/ban.html
+++ b/app/templates/user/ban.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="mt-2 text-end">
-                    {{ link_button(_('Cancel'), url_return(), None, 'danger') }}
+                    {{ link_button(_('Cancel'), Url.get_return(), None, 'danger') }}
                     {{ form.submit(class="btn btn-success") }}
                 </div>
             </div>
