--- a/app/templates/user/forgotten_password.html
+++ b/app/templates/user/forgotten_password.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <form method="POST" action="" role="form">
-    <img class="mb-2" src="{{ url_for('static', filename='images/favicon.ico') }}" alt="">
+    <img class="mb-2" src="{{ Url.get('static', filename='images/favicon.ico') }}" alt="">
     <h1 class="h2 mb-3 fw-bold">{{ title }}</h1>
 
     {{ form.hidden_tag() }}
