--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <form method="POST" action="" role="form">
-    <img class="mb-2" src="{{ url_for('static', filename='images/favicon.ico') }}" alt="">
+    <img class="mb-2" src="{{ Url.get('static', filename='images/favicon.ico') }}" alt="">
     <h1 class="h2 mb-3 fw-bold">{{ _('Hidden places') }}</h1>
 
     {{ form.hidden_tag() }}
@@ -14,6 +14,6 @@
     {{ render_field(form.remember_me) }}
     {{ form.submit(class_="btn btn-primary mb-3 w-100 btn-lg") }}
 
-    <a href="{{ url_for_return('user.forgotten_password') }}">{{ _('Forgot password?') }}</a>
+    <a href="{{ Url.for_return('user.forgotten_password') }}">{{ _('Forgot password?') }}</a>
 </form>
 {% endblock %}
