--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -6,21 +6,21 @@
 <div class="row">
     <div class="col">
         <div class="text-end m-3">
-            {{ link_button(_('Send message'), url_for('message.write', user_id=user.id), color='outline-primary') }}
-            {{ link_button(_('Edit'), url_for_return('user.edit'), color='outline-success') }}
-            {{ link_button(_('Change password'), url_for_return('user.change_password'), color='outline-success') }}
+            {{ link_button(_('Send message'), Url.get('message.write', user_id=user.id), color='outline-primary') }}
+            {{ link_button(_('Edit'), Url.for_return('user.edit'), color='outline-success') }}
+            {{ link_button(_('Change password'), Url.for_return('user.change_password'), color='outline-success') }}
             <!-- Admin section -->
-            {{ link_button(_('Ban'), url_for_return('user.ban', user_id=user.id), color='outline-danger') }}
-            {{ link_button(_('Set role'), url_for_return('user.role', user_id=user.id), color='outline-danger') }}
+            {{ link_button(_('Ban'), Url.for_return('user.ban', user_id=user.id), color='outline-danger') }}
+            {{ link_button(_('Set role'), Url.for_return('user.role', user_id=user.id), color='outline-danger') }}
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-md-3 mb-2">
         <div class="card">
-            {% set image_url = url_for('static', filename='images/person_placeholder.png') %}
+            {% set image_url = Url.get('static', filename='images/person_placeholder.png') %}
             {% if user.photo_path %}
-                {% set image_url = url_for('upload.get', path=user.photo_path) %}
+                {% set image_url = Url.get('upload.get', path=user.photo_path) %}
             {% endif %}
             <img class="card-img-top" src="{{ image_url }}" alt="Profile photo">
             <div class="row card-body">
@@ -30,8 +30,8 @@
                     {{ _('Last seen') }}: {{ user.last_seen.date() }}<br>
 
                     <!-- Todo images -->
-                    {{ _('Visits') }}: <a href="{{ url_for('location.visited_by_user', user_id=user.id) }}" class="badge bg-success">{{ visits }}</a><br>
-                    {{ _('Locations') }}: <a href="{{ url_for('location.by_user', user_id=user.id) }}" class="badge bg-success">{{ locations }}</a><br>
+                    {{ _('Visits') }}: <a href="{{ Url.get('location.visited_by_user', user_id=user.id) }}" class="badge bg-success">{{ visits }}</a><br>
+                    {{ _('Locations') }}: <a href="{{ Url.get('location.by_user', user_id=user.id) }}" class="badge bg-success">{{ locations }}</a><br>
 
                     <!-- Admin section -->
                     {{ _('Email') }}: {{ user.email }}<br>
@@ -43,7 +43,7 @@
                     {{ _('Role') }}: <span class="badge bg-secondary">{{ user.role }}</span><br>
 
                     {% if user.invitation %}
-                    {{ _('Invited by' )}}: <a href="{{ url_for('user.profile', user_id=user.invitation.invited_by_id) }}">{{ user.invitation.invited_by }}</a><br>
+                    {{ _('Invited by' )}}: <a href="{{ Url.get('user.profile', user_id=user.invitation.invited_by_id) }}">{{ user.invitation.invited_by }}</a><br>
                     {% endif %}
 
                     {% if user.invited | length %}
@@ -52,7 +52,7 @@
                     {% for invite in user.invited %}
                         {% if invite.user_id %}
                         <li>
-                            <a href="{{ url_for('user.profile', user_id=invite.user_id) }}">{{ invite.user }}</a>
+                            <a href="{{ Url.get('user.profile', user_id=invite.user_id) }}">{{ invite.user }}</a>
                         </li>
                         {% endif %}
                     {% endfor %}
