Generate thumbnails and reduce photo size when uploaded

--- a/app/templates/location/_metadata.html
+++ b/app/templates/location/_metadata.html
@@ -4,7 +4,7 @@
     </div>
     {% if location.photo %}
     <a href="{{ Url.get('upload.get', path=location.photo.path) }}" data-toggle="lightbox" data-gallery="title">
-        <img class="card-img-top" src="{{ Url.get('upload.get', path=location.photo.path) }}" alt="Location title image">
+        <img class="card-img-top" src="{{ Url.get('upload.get', path=location.photo.thumbnail) }}" alt="Location title image">
     </a>
     {% else %}
     <img class="card-img-top" src="{{ Url.get('static', filename='images/favicon.ico') }}" alt="Location title image">
