--- a/app/templates/location/_gallery.html
+++ b/app/templates/location/_gallery.html
@@ -18,7 +18,7 @@
                     <a href="{{ Url.get('upload.get', path=image.path) }}"
                        data-toggle="lightbox" data-gallery="photo-gallery"
                        data-caption="<b>{{ image.name }}</b>{% if image.description %}<br><br>{{ image.description }}{% endif %}" >
-                        <img src="{{ Url.get('upload.get', path=image.path) }}" class="img-fluid" alt="{{ image.name }}">
+                        <img src="{{ Url.get('upload.get', path=image.thumbnail) }}" class="img-fluid" alt="{{ image.name }}">
                         <div class="image-caption d-flex justify-content-between">
                             {{ image.created_by }}
                             <span>{{ image.created.date() }}</span>
