--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -50,6 +50,7 @@
     <script src="{{ Url.get('static', filename='js/dselect.min.js') }}"></script>
     <script src="{{ Url.get('static', filename='js/bs5-lightbox.min.js') }}"></script>
     {{ moment.include_moment() }}
+    {{ moment.lang(g.locale) }}
     <script src="{{ Url.get('static', filename='js/custom.js') }}"></script>
 </body>
 </html>
