Add space between rows of items

--- a/app/templates/location/_browse_item.html
+++ b/app/templates/location/_browse_item.html
@@ -1,4 +1,4 @@
-<div class="col-sm-6 col-xl-3">
+<div class="col-sm-6 col-xl-3 mb-3">
     <div class="card h-100 shadow{% if not location.published %} bg-warning{% endif %}">
         <a href="{{ Url.get('location.show', location_id=location.id) }}" class="stretched-link"></a>
 
